--- a/chatgpt-bootstrap/src/main/resources/application-dev.yaml
+++ b/chatgpt-bootstrap/src/main/resources/application-dev.yaml
@@ -1,3 +1,5 @@
+web:
+  upload-path: /Users/lipeng/Documents/code/web/
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -12,6 +14,8 @@ spring:
       max-lifetime: 70000         # 指定连接池中连接的最大生存时间,单位:毫秒.默认是1800000,即30分钟
       maximum-pool-size: 30       # 指定连接池最大的连接数,包括使用中的和空闲的连接,默认值10
       minimum-idle: 10            # 指定连接维护的最小空闲连接数,当使用HikariCP时指定
+  resources:
+    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
 #mybatis-plus:
 #  configuration:
 #    # 控制台打印 SQL
